added not working kafka schema config

--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=application
-server.port=8081
+server.port=8082
+spring.kafka.properties.schema.registry.url=http://schema-registry-url:8090
+spring.kafka.consumer.topic=dev-newsfeed-article
+spring.kafka.consumer.group=news-group
