--- a/application/src/main/resources/application.yaml
+++ b/application/src/main/resources/application.yaml
@@ -5,3 +5,9 @@ spring:
     password: admin
   liquibase:
     change-log: db/changelog.xml
+  kafka:
+    bootstrap-servers: "localhost:9092"
+    streams:
+      bootstrap-servers: "localhost:9092"
+    producer:
+      bootstrap-servers: "localhost:9092"
